--- a/ui/src/components/mainpage/mainpage.scss
+++ b/ui/src/components/mainpage/mainpage.scss
@@ -6,3 +6,38 @@
   //   border-color: white;
   flex-wrap: wrap;
 }
+
+@import '../scss-variables/variables.scss';
+
+.containerButton {
+  font-size: large;
+  width: 20%;
+  height: 250px;
+  margin: 10px;
+  margin-top: 25px;
+  background-color: $primary;
+  color: $text;
+  font-family: 'Roboto', sans-serif;
+  border-color: rgb(55, 55, 55);
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 2px 1px,
+    rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px,
+    rgba(0, 0, 0, 0.09) 0px 16px 8px;
+}
+
+.containerButton:hover {
+  background-color: $secondary;
+  box-shadow: 0px 0px 5px rgb(223, 223, 223);
+  border: none;
+}
+
+@media (max-width: 800px) {
+  .containerButton {
+    font-size: medium;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+  }
+}
