--- a/ui/src/components/mainpage/mainpage.scss
+++ b/ui/src/components/mainpage/mainpage.scss
@@ -1,16 +1,16 @@
 .mainPageWrapper {
   display: flex;
   flex-direction: column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
+  justify-content: left;
+  align-items: center;
+  text-align: center;
 }
-a{
+a {
   text-decoration: none;
-  color:white;
+  color: white;
 }
 .containers {
-  width:100%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -43,6 +43,24 @@ a{
   background-color: $secondary;
   box-shadow: 0px 0px 5px rgb(223, 223, 223);
   border: none;
+}
+
+.doughnutCharts {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 0px;
+}
+
+.gaugeChart {
+  // border: solid;
+  // border-radius: 10px;
+  // border-color: white;
+  // padding: 20px;
+  width: 50%;
+  height: 400px;
 }
 
 // @media (max-width: 800px) {
