--- a/ui/src/components/scss-variables/variables.scss
+++ b/ui/src/components/scss-variables/variables.scss
@@ -1,3 +1,6 @@
 $primary: rgba(0, 0, 0, 0.54);
 $secondary: rgba(0, 0, 0, 0.04);
 $text: white;
+$textDark: #121212;
+$boxShadow: rgba(253, 253, 253) 0px 1px 2px 0px,
+  rgb(255, 255, 255) 0px 2px 6px 2px;
