--- a/ui/src/components/tables/tables.scss
+++ b/ui/src/components/tables/tables.scss
@@ -18,4 +18,6 @@ td {
   box-shadow: inset 0 3px 6px -3px rgb(255, 255, 255);
   padding: 0;
   border-bottom: 1px solid $text;
+  height: 10vw;
+  
 }
