--- a/ui/src/components/mainpage/mainpage.scss
+++ b/ui/src/components/mainpage/mainpage.scss
@@ -20,7 +20,7 @@ a {
   flex-wrap: wrap;
 }
 
-@import '../scss-variables/variables.scss';
+@import '../scss-variables/variables.module.scss';
 
 // .containerButton {
 //   font-size: 1.25vw;
