--- a/ui/src/components/tables/tables.scss
+++ b/ui/src/components/tables/tables.scss
@@ -1,4 +1,4 @@
-@import '../scss-variables/variables.scss';
+@import '../scss-variables/variables.module.scss';
 
 td {
   padding: 10px;
@@ -14,5 +14,4 @@ td {
   padding: 0;
   border-bottom: 1px solid $text;
   height: 10vw;
-  
 }
