Dark/Light mode added

--- a/ui/src/components/scss-variables/variables.module.scss
+++ b/ui/src/components/scss-variables/variables.module.scss
@@ -5,3 +5,5 @@ $textDark: #121212;
 $boxShadow: rgba(253, 253, 253, 0.265) 0px 0px 6px 2px,
   rgba(255, 255, 255, 0.263) 0px 0px 6px 2px;
 $bluePrimary: #1565c0;
+$boxShadowDark: rgba(0, 0, 0, 0.477) 0px 0px 6px 2px,
+  rgba(0, 0, 0, 0.481) 0px 0px 6px 2px;
