--- a/ui/src/components/forms/UpdateMemLimits.scss
+++ b/ui/src/components/forms/UpdateMemLimits.scss
@@ -24,7 +24,7 @@
   grid-column-start: 1;
   grid-column-end: 4;
   grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-end: 4;
 }
 .soft-limit-units {
   grid-column-start: 4 ;
@@ -39,3 +39,7 @@
   grid-row-start: 3 ;
   grid-row-end: 4 ;
  }
+
+.formTitle{
+  font-size: 1.5vw;
+}
