--- a/ui/src/components/tables/tables.scss
+++ b/ui/src/components/tables/tables.scss
@@ -9,9 +9,11 @@ td {
   border-color: $bluePrimary;
 }
 
-.rowExpanded {
-  padding: 0;
-  height: 10vw;
+.rowExpanded { 
+  td{
+    padding-top: 0;
+    padding-bottom: 2vw;
+  }
 }
 
 
